fix: fix urls route in products
